crates/biome_yaml_formatter/tests/specs/prettier/yaml/spec/sequence-with-same-indentation-as-parent-mapping.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/spec/sequence-with-same-indentation-as-parent-mapping.yml
---

# Input

```yml
1:
- 2
- 3
4: 5

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
sequence-with-same-indentation-as-parent-mapping.yml:3:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a block mapping entry but instead found '- 3
    4: 5'.
  
    1 │ 1:
    2 │   - 2
  > 3 │ - 3
      │ ^^^
  > 4 │ 4: 5
      │ ^^^^
    5 │ 
  
  i Expected a block mapping entry here.
  
    1 │ 1:
    2 │   - 2
  > 3 │ - 3
      │ ^^^
  > 4 │ 4: 5
      │ ^^^^
    5 │ 
  

```
